# mllight

./: .gitignore  README.md
ai/llm_build/: pyproject.toml
ai/llm_build/src/config/: default.yaml  high_quality.yaml  phi3_balanced.yaml
ai/llm_build/src/utils/: config.py
ai/model_opt/: README.md  pyproject.toml
ai/model_opt/src/model_opt/: __init__.py  mesh_simplify_archive.py  remesh_ml.py  train_face_model.py
inference/godot/: README.md
inference/unity/: README.md
inference/unity/Assets/Scripts/: LlamaRunner.cs
model_build/: pyproject.toml
model_build/src/: tunner.py
model_build/src/config/: tiny_fast.yaml
model_build/src/utils/: __init__.py  logging.py  paths.py
toy/: transformer_toy.py
